src/tests/snapshots/mill__tests__ir__field_assign.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  %o = alloca { i64, i64 }
  %a = getelementptr inbounds { i64, i64 }, { i64, i64 }* %o, i32 0, i32 0
  store i64 10, i64* %a
  %a1 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %o, i32 0, i32 0
  %a2 = load i64, i64* %a1
  %k = alloca i64
  store i64 %a2, i64* %k
  %k3 = load i64, i64* %k
  ret i64 %k3
}

