src/tests/snapshots/mill__tests__ir__multiple_addition_with_vars.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  %a = alloca i64
  store i64 1, i64* %a
  %b = alloca i64
  store i64 2, i64* %b
  %c = alloca i64
  store i64 3, i64* %c
  %a1 = load i64, i64* %a
  %b2 = load i64, i64* %b
  %c3 = load i64, i64* %c
  %"0" = add i64 %b2, %c3
  %"1" = add i64 %a1, %"0"
  ret i64 %"1"
}

